using System.Collections;
using UnityEngine;

public class AnimStrings : MonoBehaviour
{
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string canMove = "canMove";
    internal static string jumpTrig = "jump";
    internal static string atkTrig = "atk";
    internal static string yVel = "yVel";
}